# diffome

./: .gitignore  COMPREHENSIVE_ANALYSIS.md  README.md  main.py  pyproject.toml  requirements.txt
data/: Peterson PD Top Right.trk
experiments/pd_robustness_study/data/: sampling_metadata.json  tda_results.json
experiments/pd_robustness_study/results/: experiment_report.txt  summary_table.csv
scripts/: run_comprehensive_analysis.py  run_focused_analysis.py  subatlas_tda.py  template_tda.py
src/connectome/: __init__.py  analyze_connectome_distances.py  connectome_statistics.py  fixed_persistence_visualization.py  joint_analysis.py  sampling.py  sampling_experiment.py  tda_metrics.py  topology.py  tractography.py  visualization.py
src/diffome/connectome/: base.py
src/diffome/tda/: barcode.py  compare.py  wasser.py
src/diffome/viz/: __init__.py
statistics/: fixed_persistence_analysis_20250824_154201.json  fixed_persistence_detailed_20250824_154201.csv  petersen_bilateral_combined_20250824_153225_complete.json  petersen_bilateral_combined_20250824_153225_tda.csv  petersen_bilateral_combined_20250824_153225_tractography.csv  petersen_hemisphere_comprehensive_analysis_20250824_153501_complete.json  petersen_hemisphere_comprehensive_analysis_20250824_153501_comprehensive_metrics.csv  petersen_hemisphere_comprehensive_analysis_20250824_153501_pairwise_distances.csv  petersen_hemisphere_comprehensive_analysis_20250824_153501_tda.csv
