[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "connectome"
version = "1.0.0"
description = "A comprehensive toolkit for topological analysis of brain white matter tractography"
authors = [
    {name = "Connectome Analysis Team", email = "connectome@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = [
    "neuroscience",
    "tractography", 
    "topological-data-analysis",
    "persistent-homology",
    "connectome",
    "brain-networks",
    "white-matter"
]

dependencies = [
    "dipy>=1.6.0",
    "nibabel>=4.0.0", 
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "ripser>=0.6.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.urls]
Homepage = "https://github.com/virati/diffome"
Documentation = "https://github.com/virati/diffome/tree/main"
Repository = "https://github.com/virati/diffome.git"
Issues = "https://github.com/virati/diffome/issues"

[project.scripts]
connectome-analyze = "connectome.main:main"
connectome-distances = "connectome.analyze_connectome_distances:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
connectome = ["*.txt", "*.md"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
